@@ -1,3 +1,8 @@
+2004-11-20  Bart Veer  <bartv@ecoscentric.com>
+
+	* src/flash.c: rearrange loops to avoid address comparisons, which
+	tend to go wrong if the flash is at the end of the address space
+
 2004-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/legacy_dev.c (legacy_flash_init): The end is the size plus
